--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "prettier": "^1.18.2",
     "prettylint": "^1.0.0",
     "redux-saga": "^1.1.1",
-    "tslint": "^5.20.0",
+    "tslint": "^6.0.0-beta0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-immutable": "^6.0.1",
     "tslint-sonarts": "^1.9.0",
     "type-coverage": "^2.3.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.4"
   },
   "dependencies": {},
   "scripts": {
