--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,5 @@
 {
   "presets": [
-    ["@babel/preset-env", {"targets": {"node": "current"}}],
-    "@babel/preset-react",
-    "@babel/preset-typescript"
+    ["@babel/preset-env", {"targets": {"node": "current"}}]
   ]
 }
