--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,35 +3,24 @@ env:
   node: true
   es6: true
   jest: true
-parser: '@typescript-eslint/parser'
 plugins:
-  - '@typescript-eslint'
   - 'prettier'
+  - import
 extends:
   - 'eslint:recommended'
-  - 'plugin:@typescript-eslint/recommended'
   - 'plugin:prettier/recommended'
   - 'plugin:import/errors'
   - 'plugin:import/warnings'
-  - 'plugin:import/typescript'
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
 rules:
-  '@typescript-eslint/indent':
-    - off
-  '@typescript-eslint/no-use-before-define':
-    - off
-  '@typescript-eslint/explicit-function-return-type':
-    - error
-    - allowTypedFunctionExpressions: true
-  'import/named':
-    # Buggy with typescript interfaces
-    - off
   'import/order':
     - error
     - alphabetize:
         order: asc
+  'import/export':
+    - off
   'prettier/prettier':
     - error
     - trailingComma: all
