--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.2.0",
   "description": "Redux-Saga effects with strong types.",
   "license": "MIT",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/es/index.js",
   "types": "dist/index.d.ts",
+  "sideEffects": false,
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/agiledigital/typed-redux-saga.git"
@@ -16,10 +20,15 @@
   "keywords": [
     "redux-saga",
     "saga",
-    "typescript"
+    "typescript",
+    "babel-plugin-macros"
   ],
   "peerDependencies": {
     "redux-saga": "^1.1.3"
+  },
+  "optionalDependencies": {
+    "@babel/helper-module-imports": "^7.8.3",
+    "babel-plugin-macros": "^2.8.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -54,15 +63,24 @@
     "lint:eslint": "eslint --ext=.js,.ts src types *.js *.ts",
     "lint:fix": "${npm_execpath} run eslint --fix",
     "lint:dts": "dtslint types",
+    "test": "jest",
     "build": "${npm_execpath} run build:clean && ${npm_execpath} run build:dts && ${npm_execpath} run build:js",
     "build:clean": "rimraf dist/",
     "build:dts": "copyfiles -u 1 types/**/*.d.ts dist/",
     "build:js": "rollup -c",
-    "release": "${npm_execpath} run lint && ${npm_execpath} run build && ${npm_execpath} publish"
+    "release": "${npm_execpath} run lint && ${npm_execpath} run test && ${npm_execpath} run build && ${npm_execpath} publish"
   },
   "typeCoverage": {
     "atLeast": 93.57,
     "strict": true,
     "detail": true
+  },
+  "jest": {
+    "testRegex": "./tests/.*.js$",
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/index.js"
+    ],
+    "coverageDirectory": "./coverage/"
   }
 }
