--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -10,6 +10,9 @@
     "types": [],
     "lib": ["es6"],
     "baseUrl": ".",
-      "paths": { "typed-redux-saga": ["."] }
+      "paths": {
+        "typed-redux-saga": ["."],
+        "typed-redux-saga/macro": ["./macro"]
+      }
     }
 }
