--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
     "copyfiles": "^2.3.0",
-    "dtslint": "^3.6.4",
+    "dtslint": "^3.6.12",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
@@ -35,7 +35,8 @@
     "prettier": "^2.0.5",
     "redux-saga": "^1.1.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.10.7"
+    "rollup": "^2.22.1",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "generate:templates": "node generateTemplates.js",
