--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "copyfiles": "^2.3.0",
     "dtslint": "^4.0.0",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-config-typed-fp": "^0.4.0",
+    "eslint-plugin-functional": "^3.0.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-total-functions": "^3.0.0",
     "nunjucks": "^3.2.2",
     "prettier": "^2.1.1",
     "redux-saga": "^1.1.3",
@@ -41,7 +46,7 @@
   "scripts": {
     "generate:templates": "node generateTemplates.js",
     "lint": "${npm_execpath} run lint:eslint && ${npm_execpath} run lint:dts",
-    "lint:eslint": "eslint --ext=.js src rollup.config.js generateTemplates.js",
+    "lint:eslint": "eslint --ext=.js,.ts src types rollup.config.js generateTemplates.js",
     "lint:fix": "${npm_execpath} run eslint --fix",
     "lint:dts": "dtslint types",
     "build": "${npm_execpath} run build:clean && ${npm_execpath} run build:dts && ${npm_execpath} run build:js",
