--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.26.10",
     "ts-node": "^9.0.0",
+    "type-coverage": "^2.10.0",
     "typescript": "^4.0.2"
   },
   "scripts": {
