--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "keywords": [
     "redux-saga",
-    "saga"
+    "saga",
+    "typescript"
   ],
   "peerDependencies": {
     "redux-saga": "^1.1.3"
@@ -25,7 +26,7 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@types/fs-extra": "^9.0.1",
-    "@types/node": "^14.6.4",
+    "@types/node": "^14.10.0",
     "@types/nunjucks": "^3.1.3",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
@@ -44,7 +45,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.26.11",
     "ts-node": "^9.0.0",
-    "type-coverage": "^2.10.0",
+    "type-coverage": "^2.11.0",
     "typescript": "^4.0.2"
   },
   "scripts": {
@@ -60,6 +61,8 @@
     "release": "${npm_execpath} run lint && ${npm_execpath} run build && ${npm_execpath} publish"
   },
   "typeCoverage": {
-    "atLeast": 93.57
+    "atLeast": 93.57,
+    "strict": true,
+    "detail": true
   }
 }
