Update dependencies; enable noUncheckedIndexedAccess

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "noUncheckedIndexedAccess": true,
     "types": ["node"],
     "lib": ["es6"],
     "baseUrl": ".",
