--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "dtslint": "^4.0.2",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-config-typed-fp": "^0.10.0",
+    "eslint-config-typed-fp": "^1.0.0",
     "eslint-plugin-functional": "^3.0.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-total-functions": "^3.3.0",
+    "eslint-plugin-total-functions": "^4.1.0",
     "nunjucks": "^3.2.2",
     "prettier": "^2.1.2",
     "redux-saga": "^1.1.3",
@@ -46,7 +46,7 @@
     "rollup": "^2.28.1",
     "ts-node": "^9.0.0",
     "type-coverage": "^2.13.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.1.0-beta"
   },
   "scripts": {
     "generate:templates": "ts-node generateTemplates.ts",
