--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "nunjucks": "^3.2.2",
     "prettier": "^2.1.2",
     "redux-saga": "^1.1.3",
+    "redux-saga-test-plan": "^4.0.0-rc.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.29.0",
     "ts-node": "^9.0.0",
