--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/nunjucks": "^3.1.3",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.1",
+    "babel-plugin-tester": "^10.0.0",
     "copyfiles": "^2.4.0",
     "dtslint": "^4.0.4",
     "eslint": "^7.11.0",
@@ -48,6 +49,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-total-functions": "^4.6.0",
+    "jest": "^26.5.3",
     "nunjucks": "^3.2.2",
     "prettier": "^2.1.2",
     "redux-saga": "^1.1.3",
