--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
-  "types": "dist/index.d.ts",
+  "types": "./dist",
   "sideEffects": false,
   "engines": {
     "node": ">=10.0.0"
