--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
+    "@types/babel-plugin-macros": "^2.8.3",
     "@types/fs-extra": "^9.0.2",
     "@types/node": "^14.11.10",
     "@types/nunjucks": "^3.1.3",
@@ -74,7 +75,7 @@
     "release": "${npm_execpath} run lint && ${npm_execpath} run test && ${npm_execpath} run build && ${npm_execpath} publish"
   },
   "typeCoverage": {
-    "atLeast": 91.93,
+    "atLeast": 92.46,
     "strict": true,
     "detail": true
   },
