--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -7,6 +7,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "noUncheckedIndexedAccess": true,
     "types": [],
     "lib": ["es6"],
     "baseUrl": ".",
