--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.13.0",
     "eslint-config-typed-fp": "^1.3.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-functional": "^3.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
